--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,22 @@
            <id>wso2-maven2-repository</id>
            <url>http://dist.wso2.org/maven2</url>
           </repository>
-       </repositories>
+
+        <repository>
+            <id>wso2-nexus</id>
+            <name>WSO2 internal Repository</name>
+            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/
+            </url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+        </repository>
+
+        
+
+    </repositories>
 
 
 	<dependencies>
@@ -41,6 +56,11 @@
 			<artifactId>org.wso2.carbon.connector.core</artifactId>
 			<version>4.2.0</version>
 		</dependency>
+		<dependency>
+        <groupId>org.eclipse.paho</groupId>
+        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+        <version>0.4.0.wso2v1</version>
+    </dependency>
 
 	</dependencies>
 
@@ -49,7 +69,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.0</version>
+				<version>3.0</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
