--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+ ~ Copyright (c) 2005-2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+ ~
+ ~ WSO2 Inc. licenses this file to you under the Apache License,
+ ~ Version 2.0 (the "License"); you may not use this file except
+ ~ in compliance with the License.
+ ~ You may obtain a copy of the License at
+ ~
+ ~    http://www.apache.org/licenses/LICENSE-2.0
+ ~
+ ~ Unless required by applicable law or agreed to in writing,
+ ~ software distributed under the License is distributed on an
+ ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ ~ KIND, either express or implied.  See the License for the
+ ~ specific language governing permissions and limitations
+ ~ under the License.
+ -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-  
 
-	<groupId>org.wso2.carbon.connector.template</groupId>
+
+	<groupId>org.wso2.carbon.connector</groupId>
 	<artifactId>org.wso2.carbon.connector.mqtt</artifactId>
 	<packaging>bundle</packaging>
 	<version>1.0.0</version>
 	<name>WSO2 Carbon - Connector for MQTT</name>
 	<url>http://wso2.org</url>
-	
+
 	<repositories>
-          <repository>
-           <id>wso2-maven2-repository</id>
-           <url>http://dist.wso2.org/maven2</url>
-          </repository>
-
-        <repository>
-            <id>wso2-nexus</id>
-            <name>WSO2 internal Repository</name>
-            <url>http://maven.wso2.org/nexus/content/groups/wso2-public/
+		<repository>
+			<id>wso2-maven2-repository</id>
+			<url>http://dist.wso2.org/maven2</url>
+		</repository>
+		<repository>
+			<id>wso2-nexus</id>
+			<name>WSO2 internal Repository</name>
+			<url>http://maven.wso2.org/nexus/content/groups/wso2-public/
             </url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>daily</updatePolicy>
-                <checksumPolicy>ignore</checksumPolicy>
-            </releases>
-        </repository>
-
-        
-
-    </repositories>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+				<checksumPolicy>ignore</checksumPolicy>
+			</releases>
+		</repository>
+		<repository>
+    		<id>paho-mqtt-client</id>
+    		<name>Paho MQTT Client</name>
+    		<url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
+  		</repository>
+	</repositories>
 
 
 	<dependencies>
@@ -57,11 +75,10 @@
 			<version>4.2.0</version>
 		</dependency>
 		<dependency>
-        <groupId>org.eclipse.paho</groupId>
-        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-        <version>0.4.0.wso2v1</version>
-    </dependency>
-
+    		<groupId>org.eclipse.paho</groupId>
+    		<artifactId>mqtt-client</artifactId>
+    		<version>0.4.0</version>
+  		</dependency>
 	</dependencies>
 
 	<build>
@@ -80,26 +97,25 @@
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>template-library</id>
+						<id>mqtt-library</id>
 						<phase>package</phase>
 						<goals>
 							<goal>attached</goal>
 						</goals>
 						<configuration>
-							<finalName>template-connector</finalName>
+							<finalName>mqtt-connector-1.0.0</finalName>
 							<appendAssemblyId>true</appendAssemblyId>
 
 							<filters>
 								<filter>
 									${basedir}/src/main/assembly/filter.properties
-                                </filter>
+								</filter>
 							</filters>
 							<descriptors>
 								<descriptor>src/main/assembly/assemble-connector.xml
-                                </descriptor>
+								</descriptor>
 							</descriptors>
-
-
+							
 						</configuration>
 					</execution>
 				</executions>
@@ -116,7 +132,7 @@
 						<Export-Package>
 							!javax.servlet,
 							!javax.servlet.http,
-                        </Export-Package>
+						</Export-Package>
 						<Import-Package>
 							!javax.xml.soap,
 							javax.xml.stream.*;
@@ -148,7 +164,7 @@
 							version=1.0.1,
 							javax.xml.soap; version=1.0.0,
 							*;resolution:=optional
-                        </Import-Package>
+						</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
